Some S3 improvements